--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
+body{
+  background-color: skyblue;
+}
+.box {
+  display: block;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  justify-content: center;
+  transform: translate(-50%, -50%);
+  height: auto;
+  width: 800px;
+  background-color: white;
+  box-shadow: 0px 0px 8px #888;
+  border-radius: 0.5rem;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#quote-box{
+  margin-bottom: 3rem;
+  margin-top: 3rem;
+  width: 600px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.quote{
+  padding-top: 35px;
+  font-size: 1.8rem;
+  color: skyblue;
+
+}
+
+.dash{
+  margin-right: 8px;
+  font-size: larger;
+  color: skyblue;
+}
+.author{
+  display: flex;
+  justify-content:flex-end;
+  font-size: 1.2rem;
+  padding-top: 10px;
+  color: skyblue;
+}
+
+
+.buttons{
+  display: flex;
+  padding-top: 50px;
+  justify-content: space-between;
+}
+
+
+.timg{
+  background-color: skyblue;
+  padding: .3rem .5rem;
+  height: 30px;
+  
+}
+
+.qbtn{
+  background-color: skyblue;
   color: white;
+  border: 0;
+  font-size:large;
+  width: 130px; 
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
+@media (max-width: 767px) {
+  .box {
+    width: 100%;
+    max-width: 800px;
+  }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
